<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline115"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bassa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline118"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_surface"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline118" />


    <Button
        android:id="@+id/add_new"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/add_surface_ask"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/bassa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/create_new"
        app:layout_constraintTop_toTopOf="@+id/guideline115"

        />

    <Button
        android:id="@+id/create_new"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/add_surface_nope"
        android:textColor="@color/dark_gray"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/bassa"
        app:layout_constraintLeft_toRightOf="@id/add_new"
        app:layout_constraintRight_toLeftOf="@id/esci"
        app:layout_constraintTop_toTopOf="@+id/guideline115"

        />

    <Button
        android:id="@+id/esci"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/_____cancel_text"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/bassa"
        app:layout_constraintLeft_toRightOf="@id/create_new"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline115"

        />
</androidx.constraintlayout.widget.ConstraintLayout>