<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_bottone_trasparente">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/boom2_calibration"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline94"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/mounting_side"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline111"
        app:layout_constraintEnd_toStartOf="@+id/infoMount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline94" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/angle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline100"
        app:layout_constraintEnd_toStartOf="@+id/infoAngle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline99" />

    <CheckBox
        android:id="@+id/cbxOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline111"
        app:layout_constraintEnd_toStartOf="@+id/cbxLeft"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/guideline94" />

    <CheckBox
        android:id="@+id/cbxLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline111"
        app:layout_constraintEnd_toStartOf="@+id/cbxRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbxOff"
        app:layout_constraintTop_toTopOf="@+id/guideline94" />

    <CheckBox
        android:id="@+id/cbxRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbxLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline94" />

    <TextView
        android:id="@+id/b2l"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/len"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline99"
        app:layout_constraintEnd_toStartOf="@+id/infoLength"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline111"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline99">

        <TextView
            android:id="@+id/boom2Angle_tv"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0.00"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/offsetMinus"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/dark_gray"
            android:text="-"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/boom2OffsetAngle_tv"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0.00"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/offsetPlus"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/dark_gray"
            android:text="+"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/offsetSetZero"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/dark_gray"
            android:text="SET"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/boom2Length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:focusableInTouchMode="false"
        android:maxLines="1"
        android:paddingHorizontal="30dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline99"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline111" />


    <ImageView
        android:id="@+id/save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/centV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline100"
        android:src="@drawable/save_btn"/>

    <ImageView
        android:id="@+id/exit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dark_gray"
        android:gravity="center"
        android:text="@string/exit"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/centV"
        app:layout_constraintTop_toTopOf="@+id/guideline100"
        android:src="@drawable/btn_close_web"/>

    <ImageButton
        android:id="@+id/infoMount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/guideline111"
        app:layout_constraintEnd_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline94"
        app:srcCompat="@drawable/info" />

    <ImageButton
        android:id="@+id/infoAngle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/guideline100"
        app:layout_constraintEnd_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline99"
        app:srcCompat="@drawable/info" />

    <ImageButton
        android:id="@+id/infoLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_gray"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline99"
        app:layout_constraintEnd_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline111"
        app:srcCompat="@drawable/info" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline99"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>